Basic CRUD functionality on Products set

--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.4.0",
+    "react-images-uploading": "^3.1.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.4.26",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
