--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "browserify": "^17.0.0",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
     "mdb-react-ui-kit": "^4.1.0",
+    "path-browserify": "^1.0.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -24,7 +28,9 @@
     "react-images-uploading": "^3.1.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "sweetalert2": "^11.4.26",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
